Fix background image overflow

--- a/styles.css
+++ b/styles.css
@@ -3,25 +3,33 @@
 body {
     display: flex;
     margin: 0;
+    justify-content: space-between;
 }
 
 .nature-background {
-    width: 50%;
+    width: clamp(450px, 40%, 600px);
     height: 100vh;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .nature-background img {
-    max-width: 100%;
+    width: 100%;
     height: 100%;
     position: relative;
 }
 
 .nature-background .logo {
     position: absolute;
-    top: 25%;
+    top: 20%;
     font-family: "Oxanium", Helvetica, sans-serif;
-    font-size: 5rem;
+    font-size: 3rem;
     text-align: center;
+    background: rgba(12, 12, 12, 0.5);
+    color: rgb(240, 240, 240);
+    padding: 32px;
+    box-sizing: border-box;
     width: 100%;
 }
